ui_tests/should-fail/1_1-only-fn.rs
use flex_mod::{construct, extend_parameter_list};

fn main() {}

#[construct]
mod a_mod {}

#[extend_parameter_list(..)]
struct a_struct {}
